--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cross-env": "^5.0.5",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.2.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.74.2",
