--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get started with Semantic UI React and Webpack 2",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -w & lite-server -c bs-config.js",
+    "start": "webpack -w; lite-server -c bs-config.js",
     "analyze": "cross-env ANALYZE_ENV=true yarn build",
     "analyze:production": "cross-env ANALYZE_ENV=true yarn build:production",
     "build": "webpack",
